test/src/e2e_vm_tests/test_programs/should_fail/cyclic_dependency/dependency_a/src/lib.sw
library dependency_a;

// anything `pub` here will be exported as a part of this library's API
